--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@react-three/fiber": "^8.15.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.291.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.158.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
