--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mdi/js": "^7.3.67",
+    "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@radix-ui/react-dialog": "^1.0.5",
